target/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'boolean'", "'float'", "'integer'", 
                     "'string'", "'array'", "'if'", "'else'", "'while'", 
                     "'do'", "'for'", "'of'", "'break'", "'continue'", "'true'", 
                     "'false'", "'auto'", "'void'", "'return'", "'out'", 
                     "'function'", "'inherit'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'>'", 
                     "'>='", "'<'", "'<='", "'::'", "'='", "';'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN_LITERAL", "BOOLEAN", "FLOAT", 
                      "INTEGER", "STRING", "ARRAY", "IF", "ELSE", "WHILE", 
                      "DO", "FOR", "OF", "BREAK", "CONTINUE", "TRUE", "FALSE", 
                      "AUTO", "VOID", "RETURN", "OUT", "FUNCTION", "INHERIT", 
                      "ADDOP", "SUBOP", "MULOP", "DIVOP", "MODULOP", "NOT", 
                      "AND", "OR", "EQ", "NEQ", "GT", "GTEQ", "LT", "LTEQ", 
                      "STRCONCAT", "ASSIGN", "SEMI", "LP", "RP", "LCB", 
                      "RCB", "LSB", "RSB", "COLON", "PERIOD", "COMMA", "STRING_LITERAL", 
                      "FLOAT_LITERAL", "INTEGER_LITERAL", "IDENTIFIER", 
                      "WS", "BLOCK_COMMENT", "LINE_COMMENT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_array_decl = 2
    RULE_dimensions = 3
    RULE_dimen = 4
    RULE_atomictype = 5
    RULE_var_decl = 6
    RULE_var_decl_full = 7
    RULE_var_decl_nullable_list = 8
    RULE_identifier_list = 9
    RULE_identifier = 10
    RULE_decl_type = 11
    RULE_parameter_decl = 12
    RULE_function_decl = 13
    RULE_parameterdecl_list = 14
    RULE_parameterdecl_nullable_list = 15
    RULE_param_param = 16
    RULE_inherit_parent_function_nullable = 17
    RULE_function_body = 18
    RULE_function_decl_type = 19
    RULE_expression = 20
    RULE_expr = 21
    RULE_expr_logical = 22
    RULE_expr_adding = 23
    RULE_expr_multiplying = 24
    RULE_expr_notlogical = 25
    RULE_expr_term = 26
    RULE_expr_indexop = 27
    RULE_expression_list = 28
    RULE_expression_nullable_list = 29
    RULE_exprime = 30
    RULE_operand = 31
    RULE_stmt = 32
    RULE_index_operator = 33
    RULE_function_call = 34
    RULE_assign_stmt = 35
    RULE_if_stmt = 36
    RULE_else_stmt = 37
    RULE_for_stmt = 38
    RULE_while_stmt = 39
    RULE_stmt_nullable_list = 40
    RULE_dowhile_stmt = 41
    RULE_break_stmt = 42
    RULE_continue_stmt = 43
    RULE_return_stmt = 44
    RULE_expression_nullable = 45
    RULE_call_stmt = 46
    RULE_block_stmt = 47
    RULE_block_body = 48

    ruleNames =  [ "program", "decl", "array_decl", "dimensions", "dimen", 
                   "atomictype", "var_decl", "var_decl_full", "var_decl_nullable_list", 
                   "identifier_list", "identifier", "decl_type", "parameter_decl", 
                   "function_decl", "parameterdecl_list", "parameterdecl_nullable_list", 
                   "param_param", "inherit_parent_function_nullable", "function_body", 
                   "function_decl_type", "expression", "expr", "expr_logical", 
                   "expr_adding", "expr_multiplying", "expr_notlogical", 
                   "expr_term", "expr_indexop", "expression_list", "expression_nullable_list", 
                   "exprime", "operand", "stmt", "index_operator", "function_call", 
                   "assign_stmt", "if_stmt", "else_stmt", "for_stmt", "while_stmt", 
                   "stmt_nullable_list", "dowhile_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "expression_nullable", "call_stmt", "block_stmt", 
                   "block_body" ]

    EOF = Token.EOF
    BOOLEAN_LITERAL=1
    BOOLEAN=2
    FLOAT=3
    INTEGER=4
    STRING=5
    ARRAY=6
    IF=7
    ELSE=8
    WHILE=9
    DO=10
    FOR=11
    OF=12
    BREAK=13
    CONTINUE=14
    TRUE=15
    FALSE=16
    AUTO=17
    VOID=18
    RETURN=19
    OUT=20
    FUNCTION=21
    INHERIT=22
    ADDOP=23
    SUBOP=24
    MULOP=25
    DIVOP=26
    MODULOP=27
    NOT=28
    AND=29
    OR=30
    EQ=31
    NEQ=32
    GT=33
    GTEQ=34
    LT=35
    LTEQ=36
    STRCONCAT=37
    ASSIGN=38
    SEMI=39
    LP=40
    RP=41
    LCB=42
    RCB=43
    LSB=44
    RSB=45
    COLON=46
    PERIOD=47
    COMMA=48
    STRING_LITERAL=49
    FLOAT_LITERAL=50
    INTEGER_LITERAL=51
    IDENTIFIER=52
    WS=53
    BLOCK_COMMENT=54
    LINE_COMMENT=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.decl()
            self.state = 99
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Var_declContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Var_declContext,i)


        def function_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Function_declContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Function_declContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.IDENTIFIER:
                self.state = 103
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 101
                    self.var_decl()
                    pass

                elif la_ == 2:
                    self.state = 102
                    self.function_decl()
                    pass


                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomictype(self):
            return self.getTypedRuleContext(MT22Parser.AtomictypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_decl" ):
                return visitor.visitArray_decl(self)
            else:
                return visitor.visitChildren(self)




    def array_decl(self):

        localctx = MT22Parser.Array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(MT22Parser.ARRAY)
            self.state = 109
            self.match(MT22Parser.LSB)
            self.state = 110
            self.dimensions()
            self.state = 111
            self.match(MT22Parser.RSB)
            self.state = 112
            self.match(MT22Parser.OF)
            self.state = 113
            self.atomictype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimen(self):
            return self.getTypedRuleContext(MT22Parser.DimenContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimensions" ):
                return visitor.visitDimensions(self)
            else:
                return visitor.visitChildren(self)




    def dimensions(self):

        localctx = MT22Parser.DimensionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dimensions)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.dimen()
                self.state = 116
                self.match(MT22Parser.COMMA)
                self.state = 117
                self.dimensions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.dimen()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LITERAL(self):
            return self.getToken(MT22Parser.INTEGER_LITERAL, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_dimen

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimen" ):
                return visitor.visitDimen(self)
            else:
                return visitor.visitChildren(self)




    def dimen(self):

        localctx = MT22Parser.DimenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dimen)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MT22Parser.INTEGER_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomictypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomictype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomictype" ):
                return visitor.visitAtomictype(self)
            else:
                return visitor.visitChildren(self)




    def atomictype(self):

        localctx = MT22Parser.AtomictypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atomictype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def decl_type(self):
            return self.getTypedRuleContext(MT22Parser.Decl_typeContext,0)


        def var_decl_full(self):
            return self.getTypedRuleContext(MT22Parser.Var_decl_fullContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MT22Parser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 126
                self.identifier_list()
                self.state = 127
                self.match(MT22Parser.COLON)
                self.state = 128
                self.decl_type()
                pass

            elif la_ == 2:
                self.state = 130
                self.var_decl_full()
                pass


            self.state = 133
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def var_decl_full(self):
            return self.getTypedRuleContext(MT22Parser.Var_decl_fullContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def decl_type(self):
            return self.getTypedRuleContext(MT22Parser.Decl_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl_full

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_full" ):
                return visitor.visitVar_decl_full(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_full(self):

        localctx = MT22Parser.Var_decl_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl_full)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(MT22Parser.IDENTIFIER)
                self.state = 136
                self.match(MT22Parser.COMMA)
                self.state = 137
                self.var_decl_full()
                self.state = 138
                self.match(MT22Parser.COMMA)
                self.state = 139
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(MT22Parser.IDENTIFIER)
                self.state = 142
                self.match(MT22Parser.COLON)
                self.state = 143
                self.decl_type()
                self.state = 144
                self.match(MT22Parser.ASSIGN)
                self.state = 145
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_nullable_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Var_declContext,0)


        def var_decl_nullable_list(self):
            return self.getTypedRuleContext(MT22Parser.Var_decl_nullable_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl_nullable_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_nullable_list" ):
                return visitor.visitVar_decl_nullable_list(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_nullable_list(self):

        localctx = MT22Parser.Var_decl_nullable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_decl_nullable_list)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.var_decl()
                self.state = 150
                self.var_decl_nullable_list()
                pass
            elif token in [MT22Parser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifier_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_list" ):
                return visitor.visitIdentifier_list(self)
            else:
                return visitor.visitChildren(self)




    def identifier_list(self):

        localctx = MT22Parser.Identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_identifier_list)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.identifier()
                self.state = 156
                self.match(MT22Parser.COMMA)
                self.state = 157
                self.identifier_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = MT22Parser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MT22Parser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomictype(self):
            return self.getTypedRuleContext(MT22Parser.AtomictypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_decl(self):
            return self.getTypedRuleContext(MT22Parser.Array_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_type" ):
                return visitor.visitDecl_type(self)
            else:
                return visitor.visitChildren(self)




    def decl_type(self):

        localctx = MT22Parser.Decl_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_decl_type)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.atomictype()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.array_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def decl_type(self):
            return self.getTypedRuleContext(MT22Parser.Decl_typeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_decl
